workloads/addons/ray-prometheus-analytics/pushprox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushprox
spec:
  selector:
    matchLabels:
      app: pushprox
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: pushprox
    spec:
      containers:
        - name: pushprox
          image: prometheuscommunity/pushprox:master
          resources:
            requests:
              cpu: 200m
              memory: 1024Mi
            limits:
              cpu: 400m
              memory: 1024Mi
