workloads/addons/ray-prometheus-analytics/sd-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-proxy
  template:
    metadata:
      labels:
        app: sd-proxy
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: sd-proxy
          image: truecomtelesoftindia/sd-proxy:one
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
