workloads/addons/ray-prometheus-analytics/pushprox-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pushprox
    labels:
        app: pushprox
    annotations:
        alb.ingress.kubernetes.io/healthcheck-path: /metrics
spec:
    type: ClusterIP
    ports:
        - name: service
          port: 80
          targetPort: 8080
    selector:
        app: pushprox
