workloads/addons/ray-prometheus-analytics/sd-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sd-proxy
spec:
    selector:
        app: sd-proxy
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
    type: ClusterIP
