workloads/addons/ray-prometheus-analytics/pushprox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pushprox-ingress
    annotations:
        nginx.ingress.kubernetes.io/auth-type: basic
        nginx.ingress.kubernetes.io/auth-secret: raylife-pushprox-auth
        nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - raylife'
spec:
    ingressClassName: "nginx"
    rules:
        - host: "pushprox.ray.life"
          http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: pushprox
                            port:
                                number: 80
